--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
 	<meta charset="UTF-8">
 	<title>This is Me</title>
 	<link rel="stylesheet" href="main.css"/>
+	<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div>
-		
+		<div>
+			
+		</div>
+		<div class="container">
+			<ul id="sections">
+				<li id="s1">Section One</li>
+				<p id="content1" class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt doloribus hic at quo sunt alias consectetur possimus quidem fugiat porro nemo enim maiores adipisci voluptatem reiciendis, blanditiis voluptate culpa esse.</p>
+				<li id="s2">Section Two</li>
+				<p id="content2" class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere sunt, provident reiciendis error voluptatem rem quia cumque in beatae, inventore nemo ex. Ab iure fugiat nesciunt, itaque sint molestias deleniti.</p>
+				<li id="s3">Section Three</li>
+				<p id="content3" class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut modi, pariatur, ex accusamus ad voluptates repellat sed, eos laudantium necessitatibus eligendi tenetur, quo sunt! Quo nesciunt qui, officia laborum cumque.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius atque, ullam, esse quos sequi ipsum, maxime earum impedit nostrum dolore voluptatem sed cumque. Ex corrupti animi blanditiis fuga facere amet?</p>
+			</ul>
+		</div>
 	</div>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
